@@ -76,3 +76,4 @@ Version for Joomla! 1.0.x is discontinued.
     2. Added check for J_JQUERY_LOADED constant before loading the jQuery library
     3. Moved global definitions from style attribute into CSS
     4. jQuery translator uses pt for Portuguese instead of pt-PT now
+    5. You can now exclude texts you don't want to be translated by adding class="notranslate" attribute to the text container tag (Issue 23).
